<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"/>


    <item
        android:id="@+id/favourites"
        android:title="@string/favourites"
        android:icon="@drawable/ic_favourites"/>

    <item
        android:id="@+id/downloads"
        android:title="@string/downloads"
        android:icon="@drawable/ic_downloads"/>

    <item
        android:id="@+id/notice"
        android:title="@string/notice_board"
        android:icon="@drawable/ic_notice_board"/>

    <item
        android:id="@+id/check_progress"
        android:title="@string/check_your_progess"
        android:icon="@drawable/ic_check_progress"/>


    <item
        android:id="@+id/join_community"
        android:title="@string/join_community"
        android:icon="@drawable/ic_lcommunity_logo"/>

    <item
        android:id="@+id/aboutApp"
        android:title="@string/about_app"
        android:icon="@drawable/ic_about_app"/>

    <item
        android:id="@+id/logout"
        android:title="@string/log_out"
        android:icon="@drawable/ic_logout_logo"/>

</menu>